sfdx/force-app/main/default/objects/LDGCRM_Opportunity_Impediment__c/LDGCRM_Opportunity_Impediment__c.object-meta.xml
<CustomObject>
    <description>Junction Object bringing together Opportunity and Impediment.</description>
    <label>Opportunity Impediment</label>
    <nameField>
        <displayFormat>OIID-{00000}</displayFormat>
        <label>Opportunity Impediment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Impediments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>