sfdx/force-app/main/default/objects/LDGCRM_Opportunity_Impediment__c/fields/LDGCRM_Blocked_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Blocked_Revenue__c</fullName>
    <description>If the Severity is &quot;Blocker&quot;, we consider it blocked revenue and use the Estimated Annual Revenue (Fully Ramped) from the Opportunity</description>
    <inlineHelpText>DO NOT POPULATE THIS FIELD. AUTOMATICALLY POPULATED WITH FLOW</inlineHelpText>
    <label>Blocked Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>