sfdx/force-app/main/default/objects/LDGCRM_Opportunity_Impediment__c/fields/LDGCRM_External_ID__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_External_ID__c</fullName>
    <description>External ID used for Airtable Migration</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID used for Airtable Migration</inlineHelpText>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>