sfdx/force-app/main/default/objects/LDGCRM_Opportunity_Impediment__c/fields/LDGCRM_Impediment__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Impediment__c</fullName>
    <description>Related Impediment for this Opportunity Impediment Record</description>
    <inlineHelpText>Related Impediment for this Opportunity Impediment Record</inlineHelpText>
    <label>Impediment</label>
    <referenceTo>LDGCRM_Impediment__c</referenceTo>
    <relationshipLabel>Opportunity Impediments</relationshipLabel>
    <relationshipName>Opportunity_Impediments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>