sfdx/force-app/main/default/objects/LDGCRM_Opportunity_Impediment__c/fields/LDGCRM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Opportunity__c</fullName>
    <description>Related Opportunity for this Impediment</description>
    <inlineHelpText>Related Opportunity for this Impediment</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Impediments</relationshipLabel>
    <relationshipName>Opportunity_Impediments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>