sfdx/force-app/main/default/objects/LDGCRM_Opportunity_Impediment__c/fields/LDGCRM_Severity__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Severity__c</fullName>
    <description>Is this impediment a &quot;blocker&quot;?</description>
    <inlineHelpText>Is this impediment a &quot;blocker&quot;?</inlineHelpText>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Impediment</fullName>
            </value>
            <value>
                <fullName>Blocker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>